Make some changes

--- a/src/app/board/board.component.html
+++ b/src/app/board/board.component.html
@@ -1,4 +1,5 @@
-<div class="container">
+<h2>Correct:{{ correctCount  }}</h2>
+<div class="container" >
    <app-card *ngFor="let item of cardList; let i = index;" 
             [value]="item" [key]="i">
     </app-card>
